# rust-todo-app

./: .gitignore  Cargo.toml  README.md
data/: todos.json
src/: lib.rs  main.rs  storage.rs  todo.rs
