[package]
name = "rust-todo-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo"
path = "src/main.rs"

[lib]
name = "rust_todo_app"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }